feat(auth): Add account creation on join
